<resources>
    <string name="app_name">Bahdjol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi pulvinar malesuada donec ultrices et nisl in sit consequat. Pellentesque aenean urna, id vel in. Sit purus pharetra risus volutpat ut tempor.</string>
    <string name="email_phone_number">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="forgot_your_password">Mot de passe oublié?</string>
    <string name="sign_in">Connexion</string>
    <string name="sign_up">Joindre</string>
    <string name="first_name">Prenom</string>
    <string name="last_name">Nom</string>
    <string name="phone_number">Numero de Tel</string>
    <string name="date_of_birth">Date de Naissance</string>
    <string name="address">Adresse</string>
    <string name="marital_status">Marital Status</string>
    <string name="cleaning">Néttoyage</string>
    <string name="send">Envoyer</string>
    <string name="date_and_time">Date et Heure</string>
    <string name="done">Terminé</string>
    <string name="cancel">Annuler</string>
    <string name="enter_type">Enter Type</string>
    <string name="description">Description</string>
    <string name="history">Historique</string>
    <string name="calendar">Calendrier</string>
    <string name="info">Info</string>
    <string name="bell">Bell</string>
    <string name="home">Acceuil</string>
    <string name="booking_history">Booking History</string>
    <string name="confirmed">Confirmé(s)</string>
    <string name="pending">En Attente</string>
    <string name="cancelled">Annulé(s)</string>
    <string name="completed">Achevé(s)</string>
    <string name="update">Mettre A Jour</string>
    <string name="profile">Profile</string>
    <string name="booking_not_found">Reservation Introuvable!</string>
    <string name="all">Tout</string>
    <string name="agents">Agents</string>
    <string name="details">Details</string>
    <string name="how_did_we_do">How did we do?</string>
    <string name="care_to_share_more_about_it">Care to share more about it?</string>
    <string name="publish_feedback">Publish Feedback</string>
    <string name="your_review_will_be_posted_to_the_google_play_store">Your review will be posted to the Google Play store.</string>
    <string name="wallet">Portefeuille</string>
    <string name="current_balance">Solde actuel</string>
    <string name="add_new_payment">Ajouter credit</string>
    <string name="help_section">Help Section</string>
    <string name="submit">Envoyer</string>
    <string name="membership_for_1_month_plan">MEMBERSHIP FOR 1 MONTH PLAN</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="enter_code">Saisir le code</string>
    <string name="add_payment">Ajouter Paiement</string>
    <string name="ongoing_requests">En cours</string>
    <string name="requests_history">Requests History</string>
    <string name="channel_name">service</string>
    <string name="channel_description">This is about service.</string>
</resources>