<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".agent.AgentSignInFragment">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            app:tint="@color/primaryVariantColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/field_back"
                android:elevation="5dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/email_phone_number"
                android:inputType="textEmailAddress"
                android:minHeight="45dp"
                android:padding="5dp"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/primaryColor"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="password"
                android:background="@drawable/field_back"
                android:elevation="5dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="45dp"
                android:padding="5dp"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/primaryColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/forgot_your_password"
                android:textColor="@color/primaryVariantColor"
                android:textSize="13sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:elevation="5dp"
                android:text="@string/sign_in"
                app:backgroundTint="@color/primaryVariantColor"
                app:cornerRadius="10dp" />

        </LinearLayout>


    </RelativeLayout>
</layout>