<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.HistoryFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryVariantColor"
            android:elevation="10dp"
            app:navigationIcon="@drawable/ic__arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/booking_history"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/lay_back"
            android:orientation="vertical">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/all"
                        android:textColor="@drawable/status_selector"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/confirmed"
                        android:textColor="@drawable/status_selector"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPending"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/pending"
                        android:textColor="@drawable/status_selector"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/cancelled"
                        android:textColor="@drawable/status_selector"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/completed"
                        android:textColor="@drawable/status_selector"
                        android:textSize="14sp" />

                </LinearLayout>

            </HorizontalScrollView>




        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-150dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/subs_back">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/booking_not_found"
                android:textColor="@drawable/status_selector"
                android:textSize="14sp"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>
</layout>