<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3D1E8F8"
        android:orientation="vertical"
        tools:context=".ui.ProfileFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryVariantColor"
            android:elevation="10dp"
            app:navigationIcon="@drawable/ic__arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:elevation="10dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_profile_"
                app:civ_border_width="1dp" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/ivCamera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/ivProfile"
                android:layout_alignEnd="@id/ivProfile"
                android:layout_marginTop="-25dp"
                android:src="@drawable/ic_camera"
                android:tint="@color/primaryVariantColor"
                app:civ_border_width="0dp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/first_name"/>

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/marital_status"/>

                <EditText
                    android:id="@+id/etMaritalStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/marital_status"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"/>

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_number"/>

                <EditText
                    android:id="@+id/etNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="numberSigned" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_phone_number"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/email_phone_number"
                    android:inputType="textEmailAddress" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:text="@string/update"
                    app:backgroundTint="@color/primaryVariantColor"
                    app:cornerRadius="10dp" />

            </LinearLayout>

        </ScrollView>







    </LinearLayout>

</layout>